
SVN
-------------------------------

XML:   Resolved issue CASTOR-1421 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed support for <xs:int> and <xs:integer> for code generator.
       Details: http://jira.codehaus.org/browse/CASTOR-1421
       (Werner - 20061122)
       
XML:   Resolved issue CASTOR-1703 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Implement Srcgen DateTime pattern facet
       Details: http://jira.codehaus.org/browse/CASTOR-1703
       (Edward - 20061121)

XML:   Resolved issue CASTOR-1227 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Source Generator > default datetime value
       Details: http://jira.codehaus.org/browse/CASTOR-1227
       (Edward - 20061116)

XML:   Resolved issue CASTOR-1695 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added various new options to code generator Ant task.
       Details: http://jira.codehaus.org/browse/CASTOR-1695
       (Werner - 20061116)

XML:   Resolved issue CASTOR-936 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with generated code for unbounded choices.
       Details: http://jira.codehaus.org/browse/CASTOR-936
       (Ralf - 20061115)

XML:   Resolved issue CASTOR-1603 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Moved CTF compilation away from ANT compiler task by directly calling compiler in tools.jar of Sun JDK.
       Details: http://jira.codehaus.org/browse/CASTOR-1603
       (Ralf - 20061113)

Version 1.0.5, Nov 11, 2006
-------------------------------

XML:   Resolved issue CASTOR-1669 using contribution from Paul Philion [philion@gmail.com]
       Added feature to set a custom ObjectFactory for object creation on Unmarshaller
       Details: http://jira.codehaus.org/browse/CASTOR-1669
       (Werner - 20061109)

XML:   Resolved issue CASTOR-1678 using contribution from Werner Guttmann [werner.guttmann@gmx.net]